tests/compile_fail/into/union.stderr
error: `Into` cannot be derived for unions
 --> tests/compile_fail/into/union.rs:2:5
  |
2 | pub union Foo {
  |     ^^^^^
